# term-typist

./: Cargo.toml  LICENCE  Makefile  README.md  THEMING.md
examples/: theme-colorful.toml  theme-dark.toml
scripts/: install-deps.sh
src/: audio.rs  caps.rs  config.rs  db.rs  generator.rs  graph.rs  keyboard.rs  lib.rs  main.rs  theme.rs  themes_presets.rs  ui.rs  wpm.rs
src/app/: config.rs  input.rs  mod.rs  state.rs
src/ui/: draw.rs  heatmap.rs  help.rs  keyboard.rs  leaderboard.rs  menu.rs  mod.rs  profile.rs  settings.rs
words/: words.txt
