[package]
name = "term-typist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
crossterm = "0.29.0"
ctrlc = "3.4.4"
dirs = "5.0.1"
rand = "0.8"
rusqlite = "0.37.0"
serde = { version = "1.0", features = ["derive"] }
termion = "3.0.0"
toml = "0.8"
tui = "0.19.0"
rodio = "0.17"
once_cell = "1.18"
